Closed Bug 1310443 Opened 8 years ago Closed 8 years ago

Fix Direct2D detection in reftests when using the GPU process

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

When using the GPU process, Direct2D is disabled in the UI but enabled in content. This appears to lead to reftest fails because the repeat sampling/d2d checks are confused: https://treeherder.mozilla.org/#/jobs?repo=try&author=danderson@mozilla.com&selectedJob=29210838
Attached patch fixSplinter Review
Since TreeHerder does not use the Platform Update on its Windows 7 machines, we fail to create a swap chain in the D3D11 compositor. This is expected since remote presentation was not supported until DXGI 1.2. However it's creating a mismatch between the device state (ok) and compositor state (which will always fail to initialize). That's why the reftest harness thinks we should be using Direct2D.

Ultimately we want to exit the GPU process on this condition, or even avoid launching it in the first place. Let's save that for bug 1297822.

For now this patch just adds a check to DeviceManagerDx, so we won't try to create D3D11 compositors when they're doomed to fail.
Attachment #8804112 - Flags: review?(rhunt)
Comment on attachment 8804112 [details] [diff] [review]
fix

LGTM
Attachment #8804112 - Flags: review?(rhunt) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b943d19facc6
Don't create remote D3D11 devices when remote presentation is broken. (bug 1310443, r=rhunt)
https://hg.mozilla.org/mozilla-central/rev/b943d19facc6
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: