Don't create remote D3D11 devices when remote presentation is broken. (bug 1310443, r=rhunt)